--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam architecto, necessitatibus fugiat corporis culpa
         tempore doloremque exercitationem nobis velit quia consequatur obcaecati? Ut, sit nostrum eum impedit dolores et
         fuga.</p>
+    <hr>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae incidunt adipisci, aliquam et soluta esse
+        hic facere perferendis. Neque qui vero possimus rem dignissimos numquam dolorum ipsa optio omnis deserunt
+        aperiam repellat exercitationem et, architecto adipisci, fugit, saepe sunt quod aliquam. Tenetur veniam
+        consequatur magnam nihil nam aut pariatur voluptas?</p>
 </body>
 
 </html>
