--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         hic facere perferendis. Neque qui vero possimus rem dignissimos numquam dolorum ipsa optio omnis deserunt
         aperiam repellat exercitationem et, architecto adipisci, fugit, saepe sunt quod aliquam. Tenetur veniam
         consequatur magnam nihil nam aut pariatur voluptas?</p>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem culpa ratione labore, minima perspiciatis illo blanditiis inventore quis! Neque earum, amet porro eveniet vel deserunt ratione nesciunt adipisci provident hic?</p>
 </body>
 
 </html>
